@@ -1,3 +1,9 @@
+Changese between 2.2.3 and ...
+-----------------------------------
+
+- fix issue 126: correctly match all invalid xml characters for junitxml
+  binary escape
+
 Changes between 2.2.2 and 2.2.3
 ----------------------------------------
 
